--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,11 @@
     <string name="app_name">Movie Directory</string>
     <string name="detail_page">Movie Details</string>
     <string name="app_desc">App that provides list of movies in the world and the details</string>
+    <string name="fav_page">Favourite</string>
     <string name="about_page">About App</string>
     <string name="loading_data">Loading Data</string>
     <string name="name">Name</string>
     <string name="nim">No. Student</string>
     <string name="kelas">Class</string>
+    <string name="title_activity_test">Test</string>
 </resources>
